--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.gitignore
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -19,6 +21,7 @@ lib64/
 parts/
 sdist/
 var/
+share/
 wheels/
 pip-wheel-metadata/
 share/python-wheels/
